Solve edge cases
