# swagger/v1/swagger.yaml
@@ -43,36 +43,48 @@ paths:
       summary: Retrieves all bookings
       tags:
       - Bookings
-      parameters:
-      - name: booking
-        in: path
-        required: true
-        schema:
-          type: string
       responses:
         '200':
           description: Bookings found
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  user_id:
-                    type: integer
-                  swim_class_id:
-                    type: integer
-                required: []
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    start_time:
+                      type: string
+                      nullable: true
+                    end_time:
+                      type: string
+                      nullable: true
+                    user_id:
+                      type: integer
+                    swim_class_id:
+                      type: integer
+                  required: []
             application/xml:
               schema:
-                type: object
-                properties:
-                  user_id:
-                    type: integer
-                  swim_class_id:
-                    type: integer
-                required: []
-        '404':
-          description: Booking not found
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    start_time:
+                      type: string
+                      nullable: true
+                    end_time:
+                      type: string
+                      nullable: true
+                    user_id:
+                      type: integer
+                    swim_class_id:
+                      type: integer
+                  required: []
   "/bookings/{id}":
     get:
       summary: Retrieves a booking
@@ -98,8 +110,6 @@ paths:
                     type: integer
                 required:
                 - id
-                - user_id
-                - swim_class_id
             application/xml:
               schema:
                 type: object
@@ -110,8 +120,6 @@ paths:
                     type: integer
                 required:
                 - id
-                - user_id
-                - swim_class_id
         '404':
           description: Booking not found
   "/swim_classes":
@@ -122,7 +130,7 @@ paths:
       parameters: []
       responses:
         '201':
-          description: Booking created
+          description: Swim class created
         '422':
           description: invalid request
       requestBody:
@@ -133,49 +141,77 @@ paths:
               properties:
                 booked:
                   type: boolean
-              required:
-              - booked
+              required: []
           application/xml:
             schema:
               type: object
               properties:
                 booked:
                   type: boolean
-              required:
-              - booked
+              required: []
     get:
       summary: Retrieves all Swim classes
       tags:
       - SwimClasses
-      parameters:
-      - name: swim_class
-        in: path
-        required: true
-        schema:
-          type: string
       responses:
         '200':
           description: Swim classes found
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  booked:
-                    type: boolean
-                required: []
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                      nullable: true
+                    description:
+                      type: string
+                      nullable: true
+                    location:
+                      type: string
+                      nullable: true
+                    image:
+                      type: string
+                      nullable: true
+                    fee:
+                      type: decimal
+                      nullable: true
+                    booked:
+                      type: boolean
+                  required: []
             application/xml:
               schema:
-                type: object
-                properties:
-                  booked:
-                    type: boolean
-                required: []
-        '404':
-          description: Swim classes not found
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                      nullable: true
+                    description:
+                      type: string
+                      nullable: true
+                    location:
+                      type: string
+                      nullable: true
+                    image:
+                      type: string
+                      nullable: true
+                    fee:
+                      type: decimal
+                      nullable: true
+                    booked:
+                      type: boolean
+                  required: []
   "/swim_classes/{id}":
     get:
-      summary: Retrieves a swim class
+      summary: Retrieves a Swim class
       tags:
       - SwimClasses
       parameters:
@@ -196,7 +232,6 @@ paths:
                     type: boolean
                 required:
                 - id
-                - booked
             application/xml:
               schema:
                 type: object
@@ -205,7 +240,6 @@ paths:
                     type: boolean
                 required:
                 - id
-                - booked
         '404':
           description: Swim class not found
 servers:
